# musil

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.txt  cmake_uninstall.cmake.in
cli/: CMakeLists.txt  musil.cpp
docs/: musil_anchestors.txt  user_manual_v0.5.tex
examples/: add_reconstruction.scm  arrays.mu  basic.moon  basic.scm  conv_reverb.scm  cross_synth.scm  env_and_clock_benchmark.scm  features.scm  file_watcher.scm  files.mu  filters.scm  infinite_recursion.scm  iris_classif.scm  iris_pca_kmeans.scm  load.moon  load.mu  logic.mu  math.mu  multifile.moon  multifile.mu  music_demo.moon  music_demo.mu  osc_messages.scm  osc_recv.maxpat  overview.scm  perf_fib.mu  perf_loop.mu  plot_adv.scm  procs.mu  reference.moon  reference.mu  stft_istft.scm  stress_test.scm  strings.mu  system_demo.scm  test.4th  transients.scm  udp_receiver.scm  udp_sender.scm  while.mu
examples/basic/: math.mu  music_demo.mu
examples/plotting/: harmonics.mu  plot_adv.mu  plot_basic.mu
examples/rtsound/: rt_sines_async.mu  sound_playback.mu
examples/scientific/: iris_classif.mu  iris_pca_kmeans.mu  matrix_stress.mu  reference.mu  scalar_vector_matrix.mu
examples/signals/: features.mu
examples/system/: env_and_clock_benchmark.mu  file_watcher.mu  osc_messages.mu  stress_test.mu  system_demo.mu  udp_receiver.mu  udp_sender.mu
examples/system/rtsound/: sound_playback.mu
ide/: CMakeLists.txt  musil.icns  musil_ide.cpp
src/: CMakeLists.txt  backsynth.cpp  backsynth.h  core.h  core.scm  moon.cpp  moon.h  moonil.cpp  musil.h  plotting.h  plotting.mu  plotting.scm  rtsound.h  scientific.h  scientific.scm  signals.h  signals.mu  signals.scm  stdlib.moon  stdlib.scm  system.h
src/plotting/: svg_tools.h
src/scientific/: BPF.h  KNN.h  Matrix.h  PCA.h  algorithms.h  csv_tools.h
src/signals/: FFT.h  features.h
src/system/: csv_tools.h  wav_tools.h
tests/: core_test.scm  reader_test.scm  stdlib_test.scm  test_arrays.moon  test_arrays.mu  test_builtins.mu  test_core.scm  test_numeric.moon  test_numeric.mu  test_reader.scm  test_scientific.mu  test_scientific.scm  test_signals.scm  test_stdlib.moon  test_stdlib.mu  test_wav.scm  tmp_csv_mix.csv
work/: chroma.cpp  condec.cpp  core_multi_syntax.h  dsl.cpp  dsp.h  example.tcl  examples.txt  features.h  moon_0.cpp  test.moon  ticlo.cpp  utils.h
